@@ -49,6 +49,7 @@
 ./SCons/Tool/hpcc.py
 ./SCons/Tool/hplink.py
 ./SCons/Tool/icc.py
+./SCons/Tool/icl.py
 ./SCons/Tool/ifl.py
 ./SCons/Tool/ilink.py
 ./SCons/Tool/jar.py
