@@ -870,6 +870,7 @@ g++
 g77
 gs
 icc
+icl
 ifl
 ilink
 gas
@@ -894,10 +895,11 @@ pdflatex
 pdftex
 rmic
 sgiar
-sgias
 sgicc
-sgif77
 sgilink
+sunar
+suncc
+sunlink
 tar
 tex
 yacc
